--- a/笔记.md
+++ b/笔记.md
@@ -11,7 +11,7 @@
 
 		article1 = Article(title='aaa')
 		article2 = Article(title='bbb')
-		
+
 		tag1 = Tag(name='111')
 		tag1 = Tag(name='111')
 
@@ -36,7 +36,7 @@
 			print tag.name
 
 		```
-### flask-script 
+### flask-script
 	* 通过命令行方式操作flask
 	* 执行方法：
 		python manager.py db init
@@ -83,11 +83,11 @@
 	```
 	* 执行:
 		```
-		$ python manager.py db init
-		$ python manager.py db migrate
-		$ python manager.py db upgrade
+		$ python manage.py db init
+		$ python manage.py db migrate
+		$ python manage.py db upgrade
 		```
-	
+
 ### db.create_all() 无法获取app上下文
 	* with app.app_context():
 			db.create_all()
